# sse-tdgw-binary

./: Cargo.toml  message-xml-format.md  readme.md
.trae/rules/: project_rules.md
config/: sse-message.xml
examples/: README.md  config_file_example.rs  encode_message.rs
src/: lib.rs  main.rs
src/codec/: decoder.rs  encoder.rs  mod.rs  types.rs
src/config/: manager.rs  mod.rs  parser.rs  types.rs
src/message/: field_value.rs  header.rs  message.rs  mod.rs
src/util/: error.rs  mod.rs
tests/: README.md  array_codec_test.rs  codec_integration_test.rs  error_handling_test.rs  extension_codec_test.rs  performance_benchmark.rs
