[package]
name = "sse-tdgw-binary"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
quick-xml = { version = "0.37.5", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
thiserror = "2.0.12"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
indexmap = "2.1.0"
hex = "0.4"
